styles.css
body,
ul,
li,
h1,
h2,
a {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    background-color: black;
}


.banner {
    position: relative;
}

.banner img {
    max-width: 100%;

}

.banner .welcome {
    position: absolute;
    left: 0;
    top: 30%;
    background-color: rgb(0, 0, 0);
    color: white;
    padding: 30px;
    transition: 0.3s;
}

.banner h2 {
    font-size: 74px;
}

.banner h2 span {
    font-size: 1.3em;
}

header {
    background-color: rgb(17, 17, 17);
    padding: 20px;
    text-align: center;
    position: fixed;
    width: 100%;
    z-index: 1;
    top: 0;
    left: 0;

}

header h1 {
    color: white;
    border: 8px solid white;
    padding: 6px 12px;
    display: inline-block;
    border-radius: 13px;
}

nav {
    padding: 20px;
    background-color: #000000;
    top: 105px;
    position: sticky;
}

nav li {
    width: 25%;
    display: inline-block;
    font-size: 24px;
}

nav ul {
    white-space: nowrap;
    max-width: 1200px;
    margin: 0 auto;
    text-align: center;
    z-index: 1;
}

nav li a {
    text-decoration: none;
    color: #ffffff;
    transition: 0.5s;
}
nav li a:hover {
    text-decoration: underline;
   
}

nav li a.join {
    color: rgb(129, 129, 226);
    transition: 0.3s
}


main {
    max-width: 100%;
    width: 1200px;
    margin: 80px auto;
    padding: 0 40px;
    box-sizing: border;
}

article h2 {
    color: #fffefe;
    font-size: 48px;
}

article p {
    line-height: 2em;
    color: #ffffff;
}

.images {
    text-align: center;
    margin: 80px 0;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
}

.images li {
    display: inline-block;
    width: 40%;
    transition: 0.3s;
}

.images li img {
    max-width: 100%;
    transition: 0.3s;
    z-index: 0;
}

section.join {
    background-color: #000000;
    text-align: center;
    padding: 60px 20px;
    color: #ffffff;
}

.join h2 {
    font-size: 36px;
    color: #ffffff;
}

form input {
    margin: 20px 0;
    padding: 10px 20px;
    font-size: 24px;
    border-radius: 28px;
    border: 4px solid white;
    transition: 0.4s;
}

footer {
    background: #161616;
    color: white;
    padding: 10px;
    text-align: center;
}

.images li:hover {
    position: relative;
    top: -4px;
}

form input:focus {
    border: 4px solid #4b4b4b;
    outline: none;
}

form input:valid {
    border: 4px solid #00c21a;
    outline: none;
}

article p::first-line {
    font-weight: bold;
}

article h2 span {
    background: -webkit-linear-gradient(#4d6fdf, #240579);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

@media screen and (max-width: 1400px) {
    .banner .welcome h2{
        font-size: 60px;
    }

    nav li {
        font-size: 18px;
    }
}

@media screen and (max-width: 960px) {
    .banner .welcome h2{
        font-size: 40px;
    }
}

@media screen and (max-width: 700px) {
    .banner .welcome {
        position: relative;
        text-align: center;
        padding: 10px;
    }
    .banner .welcome br{
       display: none;

    }
    .banner .welcome h2{
        font-size: 25px;
    }
    .banner .welcome span{
        font-size: 1em;
    }
    .images li {
        width: 100%;
        margin: 20px auto;
        display: block;
    }
    nav li {
        position: relative;
    }
}

@media screen and (max-width: 560px) {
    nav li {
        font-size: 20px;
        position: relative;
        display: block;
        width: 100%;
        margin: 12px 0;
    }

    header {
        position: relative;
    }
    nav {
        top: 0;
    }
}

